@@ -7,6 +7,7 @@ What's New for FreeImage
 
 Month day, 2011 - 3.15.2
 ! FreeImage now uses LibRaw 0.14.0-Beta2
++ [Herve Drolon] added new Exif maker note tags
 * [Mylek Grey] enabled the use of multi-component transforms (MCT) in J2K and JP2 saving
 * [Herve Drolon] refactored PluginICO in order to correctly support Windows Vista 256x256 icons
 
